GVPE NEWS

2.22 Sun Feb  1 17:25:28 CET 2009
	- protocol version 0.1, compatible with older releases,
	- enabled icmp/tcp/http-proxy protocols by default.
	- updated copyright in program greetings.
        - fix some configure messages.
        - updated to libev 3.52.

2.21 Wed Sep  3 06:56:27 CEST 2008
	- protocol version 0.1, compatible with older releases,
	- add missing ev++.h include header to tarball, which everybody
          who tested it apparently had in their include path :(. Caught
          by Karl Kleinpaste and Marcus Kong.

2.2  Mon Sep  1 06:28:09 CEST 2008
	- protocol version 0.1, compatible with older releases,
          but upgrade is recommended to due changed ondemand behaviour.
        - new per-node options max-ttl and max-queue.
        - convert from iom.C to libev, a high-performance event loop
          (http://software.schmorp.de/pkg/libev).
        - tcp connections were leaking in some cases.
        - retry more aggressively (once/s) to establish a connection if
          new packets arrive for it.
        - save a lot of setsockopt calls when the tos doesn't change.
        - honor disabled even on initial connect attempt.
        - changed callback mechanism to be slightly less portable
          but more efficient mechanism (standards-compliant c++ compilers
          should work).
        - increased receive window positive size, to allow for massive
          packet loss due to occasional longer drop-outs.
        - send RST when a positive window size violation is detected, but
          not in other cases, to reconnect more quickly.
        - upgraded liblzf to version 3.4.
        - dropped -fno-exceptions due to ev++.h using it.
        - node-up/down scripts are now run in sequence.
        - new -q switch for gvpectrl, for when you run it often.
        - work around the horribly inconsistent, ad-hoc, ever-changing
          and broken texinfo syntax. YMMV. avoid texinfo.