@@ -1,5 +1,7 @@
 GVPE NEWS
 
+	- add nfmark support.
+
 2.22 Sun Feb  1 17:25:28 CET 2009
 	- protocol version 0.1, compatible with older releases,
 	- enabled icmp/tcp/http-proxy protocols by default.
